--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,6 +1,8 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap');
+
+/* body{
     
-}
+} */
 
 #content {
     max-width: 1600px;
@@ -29,7 +31,7 @@ body {
 header { 
     background-color: darkslategrey;
 }
-nav a: :hover {
+nav a:hover {
     background-color: black;
     
 }
