--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -8,7 +8,14 @@
     max-width: 1600px;
     margin: 0 auto;
 }
-
+.home-title {
+    font-family: cursive;
+    font-size: 2em;
+}
+.msg {
+    background-color: #D3ACFC;
+    line-height: 1.5em;
+}
 nav a {
     text-align: center;
 }
@@ -27,6 +34,13 @@ main section {
 }
 body {
     background-color: rgba(184, 247, 226, 0.637);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header { 
     background-color: darkslategrey;
@@ -42,10 +56,26 @@ nav a {
     text-align: center;
     color: cadetblue;
     text-decoration: dotted;
+    padding: 35px;
 }
 footer p {
     font-size: 1.2em;
 }
 footer p:hover {
     text-decoration: underline;
+}
+.book, .join {
+    background-color: #083432
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+.card-img {
+    border: 10px solid #ACDAFC
+}
+main section img {
+    box-sizing: border-box;
 }
