--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -65,7 +65,7 @@ footer p:hover {
     text-decoration: underline;
 }
 .book, .join {
-    background-color: #083432
+    background-color: #083432;
     color: white;
     text-decoration: none;
     font-size: 18px;
