--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -11,10 +11,16 @@
 .home-title {
     font-family: cursive;
     font-size: 2em;
+    text-align: center;
+    
 }
 .msg {
     background-color: #D3ACFC;
     line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #3e0a75;
 }
 nav a {
     text-align: center;
@@ -44,9 +50,11 @@ h2 {
 }
 header { 
     background-color: darkslategrey;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 nav a:hover {
-    background-color: black;
+    background-color: rgb(22, 128, 170);
     
 }
 .icon {
@@ -74,8 +82,130 @@ footer p:hover {
     border-radius: 5px;
 }
 .card-img {
-    border: 10px solid #ACDAFC
+    border: 10px solid #ACDAFC;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #083432
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 main section img {
     box-sizing: border-box;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#logo_link {
+    padding-top: 3px;
+    justify-self: center;
+    align-self: center;
+}
+#hero {
+display: grid;
+grid-template-columns: 1fr 3fr 1fr;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    margin-top: -100px;
+    z-index: -1;
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    width: 100%;
+    box-shadow: 5px 5px 10px #052238;
+}
+.msg {
+    background-color: cadetblue;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #ACDAFC;
+}
+footer {
+    background-color: aquamarine;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+@media screen and (max-width: 900px) {
+ #hero, .home-grid {
+    display: block;
+    height: auto;
+ }
+ nav, footer {
+    flex-direction: column;
+ }
+ nav a {
+    display: block;
+    padding: 15px;
+ }
+ #hero {
+    margin-top: 0;
+ }
+ #hero-msg {
+    margin-top: 0;
+ }
+ #hero-msg {
+    margin-top: 0;
+ }
+ hero-msg h4 {
+    display: none;
+ }
+ #hero-msg h4 {
+    display: none;
+ }
+ #hero-msg h1 {
+    color:#052238;
+ }
+ .home-title {
+    font-size: 25px;
+ }
+ .rivers-card, .camping-card, .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+ }
+ #background {
+    display: none;
+ }
+ .mountains, .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+ }
+ footer {
+    margin-top: 25px;
+ }
 }
