--- a/wwr/site-plan-rafting.css
+++ b/wwr/site-plan-rafting.css
@@ -26,6 +26,30 @@ Fonts are separated by a & */
   --nav-background-color: #6A7FDB;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #397367;
+  .pt-serif-regular {
+    font-family: "PT Serif", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .pt-serif-bold {
+    font-family: "PT Serif", serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .pt-serif-regular-italic {
+    font-family: "PT Serif", serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .pt-serif-bold-italic {
+    font-family: "PT Serif", serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
 }
 
 
