--- a/bakingwebsite/styles/plan.css
+++ b/bakingwebsite/styles/plan.css
@@ -93,6 +93,7 @@ body {
   padding: 4em;
   font-size: 20px;
   text-align: center;
+  background-color: #eae9f8;
 }
 img {
   display: block;
@@ -230,4 +231,30 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+topnav {
+  background-color: #4c32ad;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #0a0707;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #9770df;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #2616b6;
+  color: white;
 }
